PL/Projecto/tests/good/2.nx
var x : int = 2 * 4 + 5;
print(x);
