PL/Projecto/tests/bad/7.nx
type a = int * int * int;

var x : b = 2;
